--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/index.js",
     "test": "jest --coverage"
   },
   "jest": {
+    "clearMocks": true,
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
@@ -22,5 +24,8 @@
     "dotenv": "^8.2.0",
     "jest": "^26.6.3",
     "jest-sonar-reporter": "^2.0.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
